--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-# Настройки базы данных
-DATABASE_URL=sqlite:///./test.db
-
-# Настройки авторизации
+DATABASE_URL=sqlite:///./db.sqlite
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=shop
+POSTGRES_PORT=5433
 SECRET_KEY=your_secret_key
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
