--- a/.env
+++ b/.env
@@ -3,6 +3,12 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=shop
 POSTGRES_PORT=5433
-SECRET_KEY=your_secret_key
+SECRET_KEY=GDFfdgd15dfg15d1dfg51d5f1gd5
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+SMS_API_URL=https://send.smsxabar.uz/broker-api/send
+SMS_API_LOGIN=sms_api_login
+SMS_API_PASSWORD=sms_api_password
+ADMIN_LOGIN=admin
+ADMIN_PASSWORD=admin123
+
