--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ python-dotenv==1.0.0
 websockets==11.0.3         
 alembic==1.10.2  
 email-validator==2.2.0
+requests==2.31.0
+PyJWT==2.8.0
+pyTelegramBotAPI==4.20.0
