--- a/.env
+++ b/.env
@@ -11,4 +11,6 @@ SMS_API_LOGIN=sms_api_login
 SMS_API_PASSWORD=sms_api_password
 ADMIN_LOGIN=admin
 ADMIN_PASSWORD=admin123
-
+SMTP_SERVER=smtp.mail.ru
+MAIL_FROM=company_mail@gmail.com
+MAIL_PASSWORD=sdfy78r2ubhuf3b
